Updated Picture Link

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Kolect"
-  avatar           : "KOLECT.jpg"
+  avatar           : "KOLECT.png"
   bio              : "Amrita Vishwa Vidyapeetham"
   location         : "Coimbatore, India"
   employer         : "Amrita Vishwa Vidyapeetham"
