Updated KOLECT Specific Settings

--- a/_config.yml
+++ b/_config.yml
@@ -85,18 +85,18 @@ author:
   bio              : "Amrita Vishwa Vidyapeetham"
   location         : "Coimbatore, India"
   employer         : "Amrita Vishwa Vidyapeetham"
-  home             : #"https://amrita.edu/faculty/ramaguru-radhakrishnan/"
+  home             : "https://kolect-amrita.github.io/"
   googlescholar    : #"https://scholar.google.com/citations?user=-DjvKqgAAAAJ"
-  email            : #"ramaguru.90[at]gmail[dot]com"
+  email            : "kolect.amrita[at]gmail[dot]com"
   researchgate     : #"https://www.researchgate.net/profile/Ramaguru-Radhakrishnan"
   bitbucket        : #"ramagururadhakrishnan"
   codepen          : #"ramagururadhakrishnan"
-  github           : "ramagururadhakrishnan"
+  github           : "kolect-amrita"
   growkudos        : #"https://www.growkudos.com/profile/ramaguru_radhakrishnan"
   keybase          : #"ramagurur"
-  instagram        : #"ramagururadhakrishnan"
+  instagram        : "kolect.amrita"
   impactstory      : #"https://profiles.impactstory.org/u/0000-0002-9508-5902"
-  linkedin         : "ramaguru-radhakrishnan"
+  linkedin         : "kolect"
   orcid            : #"https://orcid.org/0000-0002-9508-5902"
   scopus           : #"https://www.scopus.com/authid/detail.uri?authorId=57210210467"   
   soundcloud       : #"ramaguru-radhakrishnan"
