--- a/_config.yml
+++ b/_config.yml
@@ -206,6 +206,13 @@ defaults:
     values:
       layout: single
       author_profile: true
+  # _fieldvisit
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
   # _publications
   - scope:
       path: ""
