Added Field Visit Navigation URL

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,9 @@ main:
   - title: "Divisions"
     url: /divisions"
     
+  - title: "fieldvisit"
+    url: /fieldvisit/"
+ 
   - title: "Projects"
     url: /projects/
     
